tests/compile-fail/fail3.stderr
error[E0392]: parameter `T` is never used
 --> $DIR/fail3.rs:5:13
  |
5 |     union U<T>: Debug = u8;
  |             ^ unused parameter
  |
  = help: consider removing `T`, referring to it in a field, or using a marker such as `std::marker::PhantomData`
